--- a/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 spring.application.name=My_Trip_Quest
+
+# 1. 파일이 저장될 서버의 실제 물리적 경로 (Physical Directory)
+file.upload.dir=C:/mytripquest_data/uploads/
+
+# 2. 브라우저에서 접근할 가상 URL 경로 (Web Access Path)
+# 반드시 / 로 끝나야 하며, WebMvcConfig의 addResourceHandler와 일치해야 합니다.
+file.upload.url-path=/images/
+
+# file 저장 위치
+#spring.servlet.multipart.location=${user.home}/uploads
+# 메모리에 저장하는 최대 크기
+spring.servlet.multipart.file-size-threshold=10MB   
+# 파일당 최대 크기
+spring.servlet.multipart.max-file-size=10MB         
+# 여러 파일 업로드 시 최대 크기
+spring.servlet.multipart.max-request-size=50MB      
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mytripquest?serverTimezone=UTC
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
+
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.minimum-idle=3
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.connection-timeout=600000
+spring.datasource.hikari.data-source-properties.profileSQL=true
+
+# DTO가 있는 곳을 지정해서 mapper에서 fully qualified name을 사용하지 않고 클래스만 사용 가능
+mybatis.type-aliases-package=com.mytripquest.*.dto
+
+# 깊이에 상관 없이 /mappers의 모든 하위 경로에 있는 모든 xml 문서를 사용
+mybatis.mapper-locations=classpath:/mappers/**/*.xml
+#mybatis.configuration.map-underscore-to-camel-case=true
