업로드 파일  경로 프로퍼티스 수정

--- a/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=My_Trip_Quest
 
 # 1. 파일이 저장될 서버의 실제 물리적 경로 (Physical Directory)
-file.upload.dir=C:/mytripquest_data/uploads/
+file.upload.dir=${user.dir}/uploads/
 
 # 2. 브라우저에서 접근할 가상 URL 경로 (Web Access Path)
 # 반드시 / 로 끝나야 하며, WebMvcConfig의 addResourceHandler와 일치해야 합니다.
