--- a/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>17</java.version>
 		<mybatis-spring-version>3.0.5</mybatis-spring-version>
         <springdoc-openapi-starter-webmvc-ui-version>2.8.13</springdoc-openapi-starter-webmvc-ui-version>
+        <jjwt.version>0.13.0</jjwt.version>
     </properties>
  	<dependencies>
         <dependency>
@@ -102,16 +103,35 @@
             <version>${springdoc-openapi-starter-webmvc-ui-version}</version>
         </dependency>
         <!--spring-security 기본 lib-->
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
-        spring-security test를 위한 편의 기능 제공
+        
+        <!-- JWT 라이브러리 -->
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>${jjwt.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-impl</artifactId>
+		    <version>${jjwt.version}</version>
+		    <scope>runtime</scope>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-jackson</artifactId>
+		    <version>${jjwt.version}</version>
+		    <scope>runtime</scope>
+		</dependency>
+        
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
-        </dependency>-->
+        </dependency>
         
         <!-- JSP에서 spring-security 태그를 사용하기 위한 라이브러리 -->
         <!--<dependency>
