--- a/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
@@ -33,3 +33,7 @@ mybatis.type-aliases-package=com.mytripquest.*.dto
 # 깊이에 상관 없이 /mappers의 모든 하위 경로에 있는 모든 xml 문서를 사용
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
 #mybatis.configuration.map-underscore-to-camel-case=true
+
+# JWT settings
+jwt.secret=your-very-secret-key-that-is-long-and-secure-enough
+jwt.expiration_time=60000
