fix: 이메일, 닉네임 중복 시 명확한 오류 응답 및 주석 한글화

--- a/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
@@ -102,7 +102,7 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc-openapi-starter-webmvc-ui-version}</version>
         </dependency>
-        <!--spring-security 기본 lib-->
+        <!-- Spring Security 기본 라이브러리 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
