--- a/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
@@ -34,6 +34,6 @@ mybatis.type-aliases-package=com.mytripquest.*.dto
 mybatis.mapper-locations=classpath:/mappers/**/*.xml
 #mybatis.configuration.map-underscore-to-camel-case=true
 
-# JWT settings
+# JWT 설정
 jwt.secret=your-very-secret-key-that-is-long-and-secure-enough
 jwt.expiration_time=60000
