--- a/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/src/main/resources/application.properties
@@ -36,4 +36,4 @@ mybatis.mapper-locations=classpath:/mappers/**/*.xml
 
 # JWT 설정
 jwt.secret=your-very-secret-key-that-is-long-and-secure-enough
-jwt.expiration_time=60000
+jwt.expiration_time=3600000
