--- a/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
+++ b/02_My_Trip_Quest/backend/My_Trip_Quest/pom.xml
@@ -126,6 +126,13 @@
 		    <version>${jjwt.version}</version>
 		    <scope>runtime</scope>
 		</dependency>
+
+		<!-- 이미지 메타데이터 추출 라이브러리 -->
+		<dependency>
+			<groupId>com.drewnoakes</groupId>
+			<artifactId>metadata-extractor</artifactId>
+			<version>2.19.0</version>
+		</dependency>
         
         <dependency>
             <groupId>org.springframework.security</groupId>
